# autoremove-quarantine

./: .gitignore  Cargo.toml  README.md
src/: config.rs  install.rs  main.rs  moe.absolucy.autoremove-quarantine.plist  watch.list.default
