[package]
name = "autoremove-quarantine"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Lucy <lucy@absolucy.moe>"]

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
directories = "5"
notify = "6"
tracing = "0.1"
tracing-oslog = "0.2"
tracing-subscriber = "0.3"
tracing-unwrap = "1"
xattr = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = "none"
strip = "debuginfo"
